--- a/client/src/app/modules/auth/modules/employee/components/dashboard/total-orders/total-orders.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/dashboard/total-orders/total-orders.component.html
@@ -12,7 +12,7 @@
       </mat-form-field>
     </div>
   </div>
-  <div *ngIf="showSpinner">
+  <div *ngIf="showSpinner" style="min-height: 400px;">
     <mat-spinner strokeWidth="3" [diameter]="50"></mat-spinner>
   </div>
   <div>
