Show a spinner while auth module is loaded.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,4 @@
- <router-outlet></router-outlet>
+<div class="overlay" *ngIf="loadingRouteConfig">
+  <mat-spinner strokeWidth="3" [diameter]="50"></mat-spinner>
+</div>
+<router-outlet></router-outlet>
