--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -16,3 +16,17 @@
 #login-content-wrapper {
 	width: 100%;
 }
+
+.overlay {
+  position: absolute;
+  z-index: 1002;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
+}
+
+.mat-spinner {
+  position: relative;
+  margin-top: 100px;
+  margin-left: 50%;
+}
