--- a/client/src/app/modules/auth/modules/employee/components/orders/new-order/new-order.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/new-order/new-order.component.html
@@ -82,7 +82,7 @@
                 Subtotal: {{order.subtotal | currency}}
               </div>
               <div *ngIf="isFeeApplicable()">
-                Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
+                Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{order.feeExplanation}}" matTooltipPosition="right">
                 </fa-icon>                  
               </div>
               <div style="background-color: #F5F5F5">
@@ -156,7 +156,7 @@
                 Subtotal: {{order.subtotal | currency}}
               </div>
               <div *ngIf="isFeeApplicable()">
-                Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
+                Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{order.feeExplanation}}" matTooltipPosition="right">
                 </fa-icon>                  
               </div>
               <div style="background-color: #F5F5F5">
