Add geocodes to compnay information.

--- a/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-routes/route-map/route-map.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-routes/route-map/route-map.component.html
@@ -9,7 +9,7 @@
       [markerDraggable]="false"
     >
     </agm-marker>
-    <agm-marker
+    <agm-marker *ngIf="businessMarker"
       [latitude]="businessMarker.lat"
       [longitude]="businessMarker.lng"
       [iconUrl]="homeIcon"
