Add map of clients in public/client component.

--- a/client/src/app/modules/public/components/client/client.component.html
+++ b/client/src/app/modules/public/components/client/client.component.html
@@ -1,1 +1,6 @@
-<div [innerHtml]="getContent() | safe: 'html'"></div>
+<div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="space-around">
+  <div [innerHtml]="getContent() | safe: 'html'"></div>
+  <div>
+    <app-clients></app-clients>
+  </div>
+</div>
