--- a/client/src/app/modules/public/components/product/product.component.html
+++ b/client/src/app/modules/public/components/product/product.component.html
@@ -1,4 +1,6 @@
 <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="space-around">
   <div [innerHtml]="getContent() | safe: 'html'"></div>
-  <app-products></app-products>
+  <div>
+    <app-products></app-products>
+  </div>
 </div>
