--- a/client/src/app/modules/auth/modules/employee/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div fxLayout="column" fxLayoutGap="20px">
   <app-todays-snapshots></app-todays-snapshots>
+  <mat-divider></mat-divider>
   <app-total-orders></app-total-orders>
+  <mat-divider></mat-divider>
   <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="center space-between">
     <div fxFlex="1 0 300px">
       <app-rank-graph metricName="client_sale_daily" chartTitle="Top Clients"></app-rank-graph>
