--- a/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/products/products/products.component.html
@@ -64,7 +64,7 @@
     <mat-paginator [pageSizeOptions]="[50, 100, 200]"></mat-paginator>
   </div>
 </div>
-<div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-around center" style="margin-top: 10px">
+<div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-around start" style="margin-top: 10px">
   <div fxFlex="1 0 400px">
     <app-history-graph metricName="product_unit_price" [instanceId]=productSelected?.id> [</app-history-graph>
   </div>
