--- a/client/src/app/modules/auth/modules/customer/components/orders/new-order/new-order.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/new-order/new-order.component.html
@@ -44,9 +44,15 @@
               </ng-container>
               <ng-container matColumnDef="quantity">
                 <th mat-header-cell *matHeaderCellDef> QTY. </th>
-                <td mat-cell *matCellDef="let row">
+                <td mat-cell *matCellDef="let row; let i = index">
                   <mat-form-field appearance="outline" class="mat-input-qty">
-                    <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity">
+                    <!-- set focus on the first row -->
+                    <div *ngIf="i==0; else noFocus">
+                      <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity" #firstItem>
+                    </div>
+                    <ng-template #noFocus>
+                      <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity">
+                    </ng-template>
                   </mat-form-field>
                 </td>
               </ng-container>
@@ -81,7 +87,8 @@
           </div>
         </div>
         <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
-          <button mat-raised-button class="action" (click)="cancel()">Cancel</button>
+          <!-- type="button" prevents Enter key to click button -->
+          <button mat-raised-button class="action" type="button" (click)="cancel()">Cancel</button>
           <button mat-raised-button class="action" matStepperNext type="button" [disabled]="order.totalAmount<=0">Review <fa-icon icon="long-arrow-alt-right"></fa-icon></button>
         </div>
       </form>
@@ -154,7 +161,7 @@
           </div>
         </div>
         <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
-          <button mat-raised-button class="action" (click)="cancel()">Cancel</button>
+          <button mat-raised-button class="action" type="button" (click)="cancel()">Cancel</button>
           <button mat-raised-button class="action" matStepperPrevious type="button"><fa-icon icon="long-arrow-alt-left"></fa-icon> Edit</button>
           <button mat-raised-button class="action" color="green" (click)="create()">Submit</button>
         </div>          
