--- a/client/src/app/modules/auth/modules/customer/components/orders/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/order-detail/order-detail.component.html
@@ -69,9 +69,15 @@
                   <th mat-header-cell *matHeaderCellDef> QTY. </th>
                   <div *ngIf="order.status == 'Submitted'; then editable; else readonly"></div>
                   <ng-template #editable>
-                    <td mat-cell *matCellDef="let row">
+                    <td mat-cell *matCellDef="let row; let i = index">
                       <mat-form-field appearance="outline" class="mat-input-qty">
-                        <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity">
+                        <!-- set focus on the first row -->
+                        <div *ngIf="i==0; else noFocus">
+                          <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity" #firstItem>
+                        </div>
+                        <ng-template #noFocus>
+                          <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity">
+                        </ng-template>
                       </mat-form-field>
                     </td>
                   </ng-template>
@@ -110,8 +116,9 @@
             </div>
           </div>
           <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
-            <button mat-raised-button class="action" routerLink="../">Close</button>
-            <button mat-raised-button class="action" color="warn" (click)="cancelOrder()" [disabled]="order.status != 'Submitted'">
+            <!-- type="button" prevents Enter key to click button -->
+            <button mat-raised-button class="action" type="button" routerLink="../">Close</button>
+            <button mat-raised-button class="action" color="warn" type="button" (click)="cancelOrder()" [disabled]="order.status != 'Submitted'">
               <fa-icon icon="exclamation-circle"></fa-icon> Cancel Order
             </button>
             <button mat-raised-button class="action" matStepperNext type="button" [disabled]="order.status != 'Submitted' || !orderFG.dirty || order.totalAmount <= 0">Review <fa-icon icon="long-arrow-alt-right"></fa-icon></button>
@@ -187,7 +194,7 @@
             </div>
           </div>
           <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
-            <button mat-raised-button class="action" routerLink="../">Close</button>
+            <button mat-raised-button class="action" type="button" routerLink="../">Close</button>
             <button mat-raised-button class="action" matStepperPrevious type="button"><fa-icon icon="long-arrow-alt-left"></fa-icon> Edit</button>
             <button mat-raised-button class="action" color="green" (click)="save()">Update</button>
           </div>
