--- a/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
@@ -70,9 +70,15 @@
               <th mat-header-cell *matHeaderCellDef> QTY. </th>
               <div *ngIf="order.status == 'Submitted'; then editable; else readonly"></div>
               <ng-template #editable>
-                <td mat-cell *matCellDef="let row">
+                <td mat-cell *matCellDef="let row; let i = index">
                   <mat-form-field appearance="outline" class="mat-input-qty">
-                    <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity">
+                    <!-- set focus on the first row -->
+                    <div *ngIf="i==0; else noFocus">
+                      <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity" #firstItem>
+                    </div>
+                    <ng-template #noFocus>
+                      <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity">
+                    </ng-template>
                   </mat-form-field>
                 </td>
               </ng-template>
