--- a/client/src/app/modules/auth/modules/customer/components/orders/new-order/new-order.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/new-order/new-order.component.html
@@ -63,10 +63,14 @@
               <ng-container matColumnDef="subtotal">
                 <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
                 <td mat-cell *matCellDef="let row">{{row.subtotal | currency}}</td>
-              </ng-container>              
+              </ng-container>
+              <ng-container matColumnDef="unit">
+                <th mat-header-cell *matHeaderCellDef> UNIT </th>
+                <td mat-cell *matCellDef="let row">{{row.unit}}</td>
+              </ng-container>
             </table>
           </div>
-          <div fxLayout="row" fxLayoutAlign="end">
+          <div *ngIf="!hidePrice" fxLayout="row" fxLayoutAlign="end">
             <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center">
               <div>
                 Subtotal: {{order.subtotal | currency}}
@@ -125,21 +129,25 @@
                 <th mat-header-cell *matHeaderCellDef> CATEGORY </th>
                 <td mat-cell *matCellDef="let row">{{row.category}}</td>
               </ng-container>
-              <ng-container matColumnDef="unitPrice">
-                <th mat-header-cell *matHeaderCellDef> UNIT PRICE </th>
-                <td mat-cell *matCellDef="let row">{{row.unitPrice | currency}}&#47;{{row.unit}}</td>
-              </ng-container>
               <ng-container matColumnDef="quantity">
                 <th mat-header-cell *matHeaderCellDef> QTY. </th>
                 <td mat-cell *matCellDef="let row;">{{row.quantity.value}}</td>
               </ng-container>
+              <ng-container matColumnDef="unitPrice">
+                <th mat-header-cell *matHeaderCellDef> UNIT PRICE </th>
+                <td mat-cell *matCellDef="let row">{{row.unitPrice | currency}}&#47;{{row.unit}}</td>
+              </ng-container>
               <ng-container matColumnDef="subtotal">
                 <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
                 <td mat-cell *matCellDef="let row">{{row.subtotal | currency}}</td>
-              </ng-container>              
+              </ng-container>
+              <ng-container matColumnDef="unit">
+                <th mat-header-cell *matHeaderCellDef> UNIT </th>
+                <td mat-cell *matCellDef="let row">{{row.unit}}</td>
+              </ng-container>
             </table>
           </div>
-          <div fxLayout="row" fxLayoutAlign="end">
+          <div *ngIf="!hidePrice" fxLayout="row" fxLayoutAlign="end">
             <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center">
               <div>
                 Subtotal: {{order.subtotal | currency}}
@@ -169,5 +177,3 @@
     </mat-horizontal-stepper>
   </mat-card-content>
 </mat-card>
-
-
