--- a/client/src/app/modules/auth/modules/customer/components/orders/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/order-detail/order-detail.component.html
@@ -92,10 +92,14 @@
                 <ng-container matColumnDef="subtotal">
                   <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
                   <td mat-cell *matCellDef="let row">{{row.subtotal | currency }}</td>
-                </ng-container>              
+                </ng-container>
+                <ng-container matColumnDef="unit">
+                  <th mat-header-cell *matHeaderCellDef> UNIT </th>
+                  <td mat-cell *matCellDef="let row">{{row.unit}}</td>
+                </ng-container>
               </table>
             </div>
-            <div fxLayout="row" fxLayoutAlign="end">
+            <div *ngIf="!hidePrice" fxLayout="row" fxLayoutAlign="end">
               <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center">
                 <div>
                   Subtotal: {{order.subtotal | currency}}
@@ -169,10 +173,14 @@
                 <ng-container matColumnDef="subtotal">
                   <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
                   <td mat-cell *matCellDef="let row">{{row.subtotal | currency }}</td>
-                </ng-container>              
+                </ng-container>
+                <ng-container matColumnDef="unit">
+                  <th mat-header-cell *matHeaderCellDef> UNIT </th>
+                  <td mat-cell *matCellDef="let row">{{row.unit}}</td>
+                </ng-container>
               </table>
             </div>
-            <div fxLayout="row" fxLayoutAlign="end">
+            <div *ngIf="!hidePrice" fxLayout="row" fxLayoutAlign="end">
               <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center">
                 <div>
                   Subtotal: {{order.subtotal | currency}}
