--- a/client/src/app/modules/auth/modules/customer/components/orders/orders/orders.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/orders/orders.component.html
@@ -22,6 +22,7 @@
         <td mat-cell *matCellDef="let row" [ngClass]="{
         'status-submitted' : row.status == 'Submitted',
         'status-processed' : row.status == 'Processed',
+        'status-shipped' : row.status == 'Shipped',
         'status-completed' : row.status == 'Completed',
         'status-cancelled' : row.status == 'Cancelled'
         }"> {{row.status | uppercase}} </td>
@@ -45,7 +46,7 @@
       <ng-container matColumnDef="pdf">
         <th mat-header-cell *matHeaderCellDef> PDF </th>
         <td mat-cell *matCellDef="let row">
-          <button mat-icon-button matTooltip="Download invoice document" (click)="downloadPdf(row.id)"><fa-icon icon="file-pdf"></fa-icon></button>
+          <button *ngIf="showPdf(row.status)" mat-icon-button matTooltip="Download invoice document" (click)="downloadPdf(row.id)"><fa-icon icon="file-pdf"></fa-icon></button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
