Order detail hides/shows PDF button based on 'hasInvoice' property of order.

--- a/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
@@ -27,7 +27,7 @@
       </div>
       <div fxFlex="auto">
       </div>
-      <div fxFlex="nogrow">
+      <div *ngIf="order.hasInvoice" fxFlex="nogrow">
         <button mat-raised-button matTooltip="Download invoice document" (click)="downloadPdf()"><fa-icon icon="file-pdf"></fa-icon> Download</button>
       </div>
     </div>
