--- a/client/src/app/modules/auth/modules/customer/components/orders/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/order-detail/order-detail.component.html
@@ -23,7 +23,7 @@
       </div>
       <div fxFlex="auto">
       </div>
-      <div *ngIf="!hidePrice" fxFlex="nogrow">
+      <div *ngIf="order.hasInvoice" fxFlex="nogrow">
         <button mat-raised-button matTooltip="Download invoice document" (click)="downloadPdf()"><fa-icon icon="file-pdf"></fa-icon> Download</button>
       </div>
     </div>   
